<?xml version="1.0"?>
<package format="2">
  <name>manos_vision</name>
  <version>0.0.0</version>
  <description>The manos_vision package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
